$Id: History,v 1.9 2002-12-09 10:06:15 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 01 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

December 9, 2002  Gabriele Cosmo (test01-V04-01-00)
- Removed usage of obsolete libTools for histograms, removed from setup in GNUmakefile.
- Cleared warnings on Linux-g++.

October 18, 2001  Steve O'Neale
- Update reference outputs in tests directory

February 14, 2001  Steve O'Neale  (test01-V03-00-01)
- Reference outputs updated. 

February 07, 2001  Gabriele Cosmo  (test01-V03-00-00)
- Added geometry setup for testing G4AssemblyVolume.
- Extended all input macros. Reference outputs will need to be updated.

June 17, 2000  John Allison  (test01-V01-01-01)
- Updated test01.out for geant4-01-01-ref-06.

June 9, 2000  John Allison  (test01-V01-01-00)
- Improved GNUmakefile.

November 25, 99  V.Grichine and J. Apostolakis     -  

Created second (with booleans) version of this test, starting from RayGunTest.cc
Renamed  RayGunTest.cc to test01.cc

April 22, 98  V.Grichine and J. Apostolakis     -  rgt-01-00-01

Created first version of this test, starting from tests/test01.
Renamed test01.cc to RayGunTest.cc