@@ -1,4 +1,4 @@
-$Id: History,v 1.3 2001-10-19 04:53:06 stesting Exp $
+$Id: History,v 1.4 2003-01-30 10:59:07 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jan 30, 2003  Gabriele Cosmo (test10-V05-00-00)
+- Corrected technique to switch detector geometry, according to recent
+  developments in G4RunManager.
 
 Oct 18, 2001  Steve O'Neale (tests-V03-02-03)
 - Update reference output
